css/index.css
* {
    box-sizing: border-box;
    /* border: 1px solid red; */
    margin: 0; 
    padding: 0; 
    font-family: sans-serif; 
    color: #5b616b; 
}



/* STYLING FOR THE NAV BAR */

body {
    background-color: #dbf6f9;
}

header {
    height: 20%;  
}

nav {
    margin: 5vh auto;
    width: 85%; 
}

a {
    text-decoration: none; 
    color: #5b616b; 
}

ul {
    list-style: none; 
    text-align: right; 
}

.underline {
    border-bottom: 4px solid; 
}

li {
    display: inline; 
    margin: 1% 3%; 
    text-decoration: none;
    color: #5b616b;  
    padding-bottom: 5px; 
    text-align: center;
    font-weight: 600; 
    cursor: pointer; 
}


/* TITLE */

.feedHeader {
    margin-left: 10%; 
    width: auto; 
    cursor: pointer; 
}

.heading {
    margin: 0 0 5px;
    font-size: 2rem;
}

.subtitle {
    font-size: 1rem; 
}

/* MAIN SECTION */

.article-grid {
    width: 80%; 
    margin: 40px auto; 
    display: grid; 
    grid-template-columns: 30% 30% 30%;
    justify-content: space-between;
}


/* ARTICLE CARDS */ 

.article-compact {
    background-color: #fff;
    box-shadow: 0px 15px #5b616b; 
    min-width: 300px; 
    padding: 20px; 
    margin-bottom: 60px; 
    border: solid 5px; 
    border-radius: 10px; 
}

.article-compact .information {
    height: 300px; 
}

.article-compact:hover {
    background-color: #dbf9df; 
    cursor: pointer; 
    transition: all 0.25s ease-in-out;    
}

.article-compact .interactivity {
    display: flex; 
    width: 100%; 
    justify-content: space-between;
    margin: 0 auto; 
}

.article-compact button:hover {
    cursor: pointer; 
}

.article-compact button:active {
    box-shadow: none; 
    height: 35px; 
}

.like-button, .bookmark-button {
    background-color: white;
    padding: 6px 12px; 
    height: 40px; 
    width: 45%; 
    border: 3px solid; 
    font-size: 1rem;
    font-weight: 900;  
    box-shadow: 0px 5px; 
    border-radius: 10px; 
    z-index: 1; 
    margin-bottom: 10px; 
}

/* ARTICLE INFO */

.date {
    margin-bottom: 40px; 
}

/* .information {
    height: 100px; 
} */

.title {
    margin-bottom: 20px; 
}

/* SPOTLIGHT SECTION HEADER */

.spotlightHeader {
    margin-left: 10%; 
    width: auto; 
    display: none; 
    cursor: pointer; 
}


/* SPOTLIGHT STRUCTURE */ 
 
.spotlight-canvas {
    display: none; 
    width: 80%; 
    grid-template-columns: 55% 40%;
    gap: 5%; 
    margin: 40px auto 50px; 
}

.article-canvas {
    background-color: #fff;
    padding: 40px;  
    border-radius: 10px;
    border: solid 5px;
    box-shadow: 0px 15px #5b616b;  
}

.spotlightText {
    margin-bottom: 40px; 
    font-size: 1.25rem; 
    line-height: 2rem; 
}

.spotlightTitle {
    margin-bottom: 15px; 
    font-size: 2rem;  
}

.spotlightDate {
    margin: 10px 0 40px; 
    padding-bottom: 15px; 
    font-size: 1rem;
    border-bottom: 5px solid; 
}

.spotlight-like-button {
    background-color: white;
    padding: 6px 12px; 
    margin-right: 20px; 
    height: 40px; 
    border: 3px solid; 
    font-size: 1rem;
    font-weight: 900;  
    box-shadow: 0px 5px; 
    border-radius: 10px; 
    z-index: 1; 
}

.spotlight-bookmark-button {
    background-color: white;
    padding: 6px 12px; 
    margin-right: 20px; 
    height: 40px; 
    border: 3px solid; 
    font-size: 1rem;
    font-weight: 900;  
    box-shadow: 0px 5px; 
    border-radius: 10px; 
    z-index: 1; 
}

.spotlightSelected {
    background-color: #c6acf0;
}

.article-canvas button:hover {
    cursor: pointer; 
}

.article-canvas button:active {
    box-shadow: none; 
    height: 35px; 
}

/* ENGAGEMENT SECTION */ 

.comment-section {
    background-color: #f4e4fb;
    padding: 40px;  
    border-radius: 10px;
    border: solid 5px;
    box-shadow: 0px 15px; 
    margin-bottom: 50px;  
}

.comment-section h1 {
    border-bottom: 5px solid; 
    padding-bottom: 10px; 
    margin-bottom: 20px; 
}

.comment-section textarea {
    width: 100%; 
    height: 80px; 
    background-color: #fff;
    border-radius: 10px;
    border: solid 4px;
    box-shadow: 0 4px; 
    margin-bottom: 20px; 
    padding: 15px; 
    font-size: 1rem; 
    line-height: 1.25rem; 
}

.comment-section textarea:focus {
    outline: none; 
    box-shadow: 0 10px; 
    height: 90px; 
    transition: all 0.2s; 
}

.comment {
    padding: 15px;
    border: solid 2px; 
    border-radius: 10px; 
    background-color: #fff;
    margin-bottom: 25px; 
    box-shadow: 0 5px;
}

.divider {
    font-size: 2rem; 
    text-align: center; 
    margin-bottom: 15px; 
}

/* SELECTED */ 
.selected {
    background-color: #c6acf0;
}


/* MEDIA QUERIES */

@media (max-width: 1200px) {
    .article-grid {
        grid-template-columns: 47.5% 47.5%; 
        justify-content: space-between;
        margin: 40px auto; 
    }

    /* SPOTLIGHT */
    .spotlight-canvas {
        display: none; 
        width: 80%; 
        grid-template-columns: 100%; 
        margin: 40px auto 50px; 
    }

    .comment-section {
        margin-top: 40px; 
    }

    .comment-section textarea {
        height: 70px; 
    }
    
    .comment-section textarea:focus {
        height: 80px; 
    }

}

@media (max-width: 768px) {
    .article-grid {
        grid-template-columns: 100%; 
        margin: 40px auto; 
    }

    .article-compact .information {
        height: auto; 
    }

    /* SPOTLIGHT */ 

    .spotlightHeader {
        margin-top: 30px; 
        margin-left: 2.5%; 
    }

    .spotlight-canvas {
        width: 90%; 
    }

    .spotlightText {
        font-size: 1rem; 
    }
    
    .spotlightTitle {
        font-size: 1.25rem;  
    }
    
    .spotlightDate {
        padding-bottom: 15px; 
        font-size: 1rem;
    }

    .article-canvas {
        padding: 40px 20px;  
    }

    .comment-section {
        padding: 40px 20px; 
    } 
}

